# phd-jax-testing

./: .ignore  intersections.py  main.py  pyproject.toml
lmrsim/: blocks.list  config  control
lmrsim/grid/: grid-0000.metadata  grid.metadata
lmrsim/snapshots/: fluid.metadata  snapshot-times-metadata
src/: intersections.py
src/jax_test/: intersections.py  main.py
test/: test_intersections.py
tests/: test_intersections.py
